--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 
     <!-- Header with name, picture, and description -->
     <header>
-        <h1>Your Name</h1>
+        <h1>Anshuman Bhakri</h1>
         <img src="AnshumanBhakriWebsitePic.jpg" alt="Your Profile Picture">
-        <p>Hello! I am Your Name, a researcher in economics with expertise in auction theory and contract design. Welcome to my academic website where I showcase my research, CV, and teaching materials.</p>
+        <p>Hello! I am Anshuman Bhakri, a researcher in economics with expertise in auction theory and contract design. Welcome to my academic website where I showcase my research, CV, and teaching materials.</p>
     </header>
 
     <!-- Navigation tabs -->
