--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             text-align: center;
             padding: 50px;
             background-color: #maroon; /* Use Boston College maroon color */
-            color: white;
+            color: black;
         }
 
         header h1 {
