--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         header {
             text-align: center;
             padding: 50px;
-            background-color: #maroon; /* Use Boston College maroon color */
+            background-color: #7B1113; /* Boston College maroon color */
             color: black;
         }
 
@@ -86,15 +86,26 @@
         <a href="#teaching">Teaching</a>
     </nav>
 
-    <!-- Main Content Sections (you can fill in later) -->
+    <!-- Main Content Sections -->
     <section id="main">
         <h2>Main</h2>
         <p>Welcome to my academic website! Here you will find information about my research, CV, and teaching.</p>
     </section>
 
+    <!-- Research Section -->
     <section id="research">
         <h2>Research</h2>
-        <p>Details about my research and publications will be available here.</p>
+        
+        <!-- Project 1 -->
+        <h3>Project 1: Optimal Bidding Strategies in Sequential Auctions</h3>
+        <p>This research explores the design of optimal bidding strategies in sequential auctions with a focus on the role of future uncertainties in procurement contracts. We use a dynamic model to simulate firm behavior and analyze the impact of indexing on bidding decisions.</p>
+        <p><a href="https://github.com/AnshumanBhakri/project-1" target="_blank">Read more about this project</a></p>
+
+        <!-- Project 2 -->
+        <h3>Project 2: Contract Design and Deployment in the Solar Energy Sector</h3>
+        <p>In this project, we study the design of contracts for large-scale solar projects, focusing on how to incentivize timely deployment under cost uncertainties. The research incorporates data from Indian solar auctions and analyzes various contract structures, including penalty clauses.</p>
+        <p><a href="https://github.com/AnshumanBhakri/project-2" target="_blank">Read more about this project</a></p>
+
     </section>
 
     <section id="cv">
