--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             text-align: center;
             padding: 50px;
             background-color: #7B1113; /* Boston College maroon color */
-            color: black;
+            color: white;
         }
 
         header h1 {
@@ -67,6 +67,23 @@
             font-size: 28px;
             margin-bottom: 20px;
         }
+
+        /* Left-align for project details */
+        .project {
+            text-align: left;
+            margin: 0 auto;
+            max-width: 800px;
+            margin-bottom: 40px;
+        }
+
+        .project h3 {
+            font-size: 24px;
+        }
+
+        .project p {
+            font-size: 16px;
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 <body>
@@ -97,14 +114,16 @@
         <h2>Research</h2>
         
         <!-- Project 1 -->
-        <h3>Project 1: Optimal Bidding Strategies in Sequential Auctions</h3>
-        <p>This research explores the design of optimal bidding strategies in sequential auctions with a focus on the role of future uncertainties in procurement contracts. We use a dynamic model to simulate firm behavior and analyze the impact of indexing on bidding decisions.</p>
-        <p><a href="https://github.com/AnshumanBhakri/project-1" target="_blank">Read more about this project</a></p>
+        <div class="project">
+            <h3><a href="https://github.com/AnshumanBhakri/project-1" target="_blank">Project 1: Optimal Bidding Strategies in Sequential Auctions</a></h3>
+            <p>This research explores the design of optimal bidding strategies in sequential auctions with a focus on the role of future uncertainties in procurement contracts. We use a dynamic model to simulate firm behavior and analyze the impact of indexing on bidding decisions.</p>
+        </div>
 
         <!-- Project 2 -->
-        <h3>Project 2: Contract Design and Deployment in the Solar Energy Sector</h3>
-        <p>In this project, we study the design of contracts for large-scale solar projects, focusing on how to incentivize timely deployment under cost uncertainties. The research incorporates data from Indian solar auctions and analyzes various contract structures, including penalty clauses.</p>
-        <p><a href="https://github.com/AnshumanBhakri/project-2" target="_blank">Read more about this project</a></p>
+        <div class="project">
+            <h3><a href="https://github.com/AnshumanBhakri/project-2" target="_blank">Project 2: Contract Design and Deployment in the Solar Energy Sector</a></h3>
+            <p>In this project, we study the design of contracts for large-scale solar projects, focusing on how to incentivize timely deployment under cost uncertainties. The research incorporates data from Indian solar auctions and analyzes various contract structures, including penalty clauses.</p>
+        </div>
 
     </section>
 
