--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         header {
             text-align: center;
             padding: 50px;
-            background-color: #7B1113; /* Boston College maroon color */
+            background-color: #708090; /* Boston College maroon color */
             color: white;
         }
 
