--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anshuman Bhakri - Academic Website</title>
+    <title>Anshuman Bhakri - Website</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -115,13 +115,13 @@
         
         <!-- Project 1 -->
         <div class="project">
-            <h3><a href="https://github.com/AnshumanBhakri/project-1" target="_blank">Project 1: Optimal Bidding Strategies in Sequential Auctions</a></h3>
+            <h3><a href="https://github.com/AnshumanBhakri/project-1" target="_blank">Contract design in renewable energy auctions: Evidence from India</a></h3>
             <p>This research explores the design of optimal bidding strategies in sequential auctions with a focus on the role of future uncertainties in procurement contracts. We use a dynamic model to simulate firm behavior and analyze the impact of indexing on bidding decisions.</p>
         </div>
 
         <!-- Project 2 -->
         <div class="project">
-            <h3><a href="https://github.com/AnshumanBhakri/project-2" target="_blank">Project 2: Contract Design and Deployment in the Solar Energy Sector</a></h3>
+            <h3><a href="https://github.com/AnshumanBhakri/project-2" target="_blank">How large are the cost savings from auctions vs feed-in tariffs: Evidence from Germany:</a></h3>
             <p>In this project, we study the design of contracts for large-scale solar projects, focusing on how to incentivize timely deployment under cost uncertainties. The research incorporates data from Indian solar auctions and analyzes various contract structures, including penalty clauses.</p>
         </div>
 
