--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <!-- Project 1 -->
         <div class="project">
             <h3><a href="https://github.com/AnshumanBhakri/project-1" target="_blank">Contract design in renewable energy auctions: Evidence from India</a></h3>
-            <p>This research explores the design of optimal bidding strategies in sequential auctions with a focus on the role of future uncertainties in procurement contracts. We use a dynamic model to simulate firm behavior and analyze the impact of indexing on bidding decisions.</p>
+            <p>The procurement of green energy in the presence of cost uncertainty leads to the non-deployment of projects if the contracts are not optimally designed. This paper proposes the contract design for the Indian solar energy procurement auctions to help achieve their green energy targets while minimizing procurement costs. I examine how the developers, facing uncertain costs, lead to non-deployment under incomplete contracts and suggest alternative designs to mitigate these issues. I develop a model that analyzes the firms' optimal bidding and deployment decisions under cost uncertainty, drawing on the data from the auctions and post-award deployment decisions. By recovering the cost distribution of the firms, I show how the contract design influences the procurement costs and deployment outcomes. The results show that the firms take the option of not deploying under certain high-probability cost scenarios, which leads to low deployment rates. The counterfactual analysis demonstrates that incentive contracts with optimal selective bid indexing and penalties can significantly improve deployment rates while keeping procurement costs low.</p>
         </div>
 
         <!-- Project 2 -->
