--- a/research.html
+++ b/research.html
@@ -38,6 +38,16 @@
 </head>
 <body>
 
+
+      <!-- Navigation tabs on the left -->
+    <nav>
+        <a href="index.html">About Me</a>
+        <a href="research.html">Research</a>
+        <a href="cv.html">CV</a>
+        <a href="teaching.html">Teaching</a>
+    </nav>
+
+    
     <h2>Research</h2>
     
     <!-- Project 1 -->
