--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         /* Left sidebar for navigation */
         nav {
             width: 20%;
-            background-color: grey;
+            background-color: #333;
             padding: 20px;
             display: flex;
             flex-direction: column;
