--- a/research.html
+++ b/research.html
@@ -84,11 +84,11 @@
 
     <!-- Research content -->
     <main>
-        <h1>Research Projects</h1>
+        <h1>Research</h1>
 
-        <!-- Project 1 -->
+        <!-- -->
         <div class="research-project">
-            <h2>Project 1: Contract Design in Renewable Energy Procurement Auctions</h2>
+            <h2>Contract Design in Renewable Energy Procurement Auctions</h2>
             <p>
                 This research investigates how contract designs in the renewable energy sector influence procurement costs and deployment outcomes. 
                 By analyzing auction and post-award deployment data from the Indian solar energy sector, we assess the impact of bid indexing 
