--- a/research.html
+++ b/research.html
@@ -94,28 +94,19 @@
                 By analyzing auction and post-award deployment data from the Indian solar energy sector, we assess the impact of bid indexing 
                 and penalties for non-deployment.
             </p>
-            <a href="link-to-paper-1.pdf" target="_blank">Read the paper</a>
+            <a href="link-to-paper-1.pdf" target="_blank">Paper</a>
         </div>
 
-        <!-- Project 2 -->
+        <!-- -->
         <div class="research-project">
             <h2>Project 2: Auctions under Uncertainty: A Model of Bidding and Deployment</h2>
             <p>
-                This project develops a dynamic model of bidding in sequential auctions with uncertain post-award outcomes. 
+                This project develops a dynamic bidding model in sequential auctions with uncertain post-award outcomes. 
                 The study focuses on how firms' private cost signals and uncertainty over future costs affect both bidding strategies and project deployment decisions.
             </p>
             <a href="link-to-paper-2.pdf" target="_blank">Read the paper</a>
         </div>
 
-        <!-- Project 3 -->
-        <div class="research-project">
-            <h2>Project 3: The Role of Penalties in Auction Design: Evidence from Solar Energy Auctions</h2>
-            <p>
-                This paper explores the role of penalties in auction design for renewable energy projects. We analyze how varying penalty structures 
-                influence bidding behavior and project completion rates in solar energy auctions.
-            </p>
-            <a href="link-to-paper-3.pdf" target="_blank">Read the paper</a>
-        </div>
 
     </main>
 
