--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@
             margin-bottom: 10px;
         }
 
+        /* Image styling - rectangular and bigger */
         img {
-            width: 250px;
-            height: auto;
-            border-radius: 60%;
-            margin-right: 40px;
+            width: 300px; /* Increased the width to make the image bigger */
+            height: 400px; /* Set a fixed height to make it rectangular */
+            border-radius: 10px; /* Removed circular styling for rectangular shape */
+            margin-right: 40px; /* Same margin as the text to make spacing equal */
         }
 
         p {
