--- a/research.html
+++ b/research.html
@@ -99,7 +99,7 @@
 
         <!-- -->
         <div class="research-project">
-            <h2>Project 2: Auctions under Uncertainty: A Model of Bidding and Deployment</h2>
+            <h2>How large are the cost savings from auctions vs feed-in tariffs: Evidence from Germany</h2>
             <p>
                 This project develops a dynamic bidding model in sequential auctions with uncertain post-award outcomes. 
                 The study focuses on how firms' private cost signals and uncertainty over future costs affect both bidding strategies and project deployment decisions.
