--- a/research.html
+++ b/research.html
@@ -125,11 +125,10 @@
 
         <!-- Project 1 -->
         <div class="research-project">
-            <h2>Contract Design in Renewable Energy Procurement Auctions</h2>
+            <h2>Contract design in renewable energy procurement auctions: Evidence from India</h2>
             <p>
-                This research investigates how contract designs in the renewable energy sector influence procurement costs and deployment outcomes. 
-                By analyzing auction and post-award deployment data from the Indian solar energy sector, we assess the impact of bid indexing 
-                and penalties for non-deployment.
+            The procurement of green energy in the presence of cost uncertainty leads to the non-deployment of projects if the contracts are not optimally designed. This paper proposes the contract design for the Indian solar energy procurement auctions to help achieve their green energy targets while minimizing procurement costs. I examine how the developers, facing uncertain costs, lead to non-deployment under incomplete contracts and suggest alternative designs to mitigate these issues. I develop a model that analyzes the firms' optimal bidding and deployment decisions under cost uncertainty, drawing on the data from the auctions and post-award deployment decisions. By recovering the cost distribution of the firms, I show how the contract design influences the procurement costs and deployment outcomes. The results show that the firms take the option of not deploying under certain high-probability cost scenarios, which leads to low deployment rates. The counterfactual analysis demonstrates that incentive contracts with optimal selective bid indexing and penalties can significantly improve deployment rates while keeping procurement costs low.
+
             </p>
             <a href="link-to-paper-1.pdf" target="_blank">Paper</a>
         </div>
