--- a/research.html
+++ b/research.html
@@ -135,12 +135,11 @@
 
         <!-- Project 2 -->
         <div class="research-project">
-            <h2>How large are the cost savings from auctions vs feed-in tariffs: Evidence from Germany</h2>
+            <h2>How large are the cost savings from renewable energy auctions: Evidence from Germany (With Richard Sweeney)</h2>
             <p>
-                This project develops a dynamic bidding model in sequential auctions with uncertain post-award outcomes. 
-                The study focuses on how firms' private cost signals and uncertainty over future costs affect both bidding strategies and project deployment decisions.
+                In this paper, we analyze the cost savings from renewable energy auctions in Germany, focusing on wind energy procurement. After Germany’s 2017 shift from feed-in tariffs to auctions, we observe an initial decrease in tariffs, followed by a reversion to ceiling prices. We develop an empirical model of bidding in multi-unit procurement auctions to explain this pattern, showing how markups vary with bidder cost uncertainty. Using detailed geospatial and auction data, we estimate the distribution of private costs and study the dynamics of bid convergence. Our results contribute to understanding the efficiency and cost implications of renewable energy auctions.
             </p>
-            <a href="link-to-paper-2.pdf" target="_blank">Read the paper</a>
+            <a href="link-to-paper-2.pdf" target="_blank">Paper</a>
         </div>
 
     </main>
