--- a/cv.html
+++ b/cv.html
@@ -68,7 +68,7 @@
     <!-- CV embedded in the page -->
     <main>
         <h1>My CV</h1>
-        <embed src="your-cv-file.pdf" type="application/pdf" class="cv-embed">
+        <embed src="Anshuman_Bhakri_CV.pdf" type="application/pdf" class="cv-embed">
     </main>
 
 </body>
