--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <img src="AnshumanBhakriWebsitePic.jpg" alt="Your Profile Picture">
         <div>
             <h1>About Me</h1>
-            <p>Hello! I am Anshuman Bhakri, a researcher in economics specializing in auction theory and contract design. I have worked extensively on contract design in the renewable energy sector, focusing on improving procurement outcomes under uncertainty. Explore my research, CV, and teaching materials through the navigation links on the left.</p>
+            <p>Hello! I am Anshuman Bhakri, I am a PhD candidate at Boston College. My research interests lie at the intersection of Industrial Organization, and Environmental, and Energy Economics. My job market paper focuses on the effect of contract design in renewable energy auctions for the case of Indian solar auctions.</p>
         </div>
     </main>
 
