--- a/research.html
+++ b/research.html
@@ -130,7 +130,7 @@
                  In procurement auctions, contracts set the post-auction investment terms. Under future uncertainty, incomplete contracts result in under-investment. This paper proposes contract design for the Indian solar energy procurement auctions to help achieve their green energy targets at the lowest possible procurement costs. I estimate a model to analyze the firms' optimal bidding and deployment decisions under cost uncertainty. Using the auction and post-award deployment data, I recover the cost distribution of the firms and show how the contract design influences procurement costs and deployment outcomes. The results show that the firms take the option of not deploying under high-probability cost scenarios, which leads to low deployment rates. The counterfactual analysis shows that incentive contracts with optimal selective bid indexing and penalties can significantly improve deployment rates while keeping procurement costs low.
 
             </p>
-            <a href="link-to-paper-1.pdf" target="_blank">Paper</a>
+            <a href="https://www.dropbox.com/scl/fi/i6neja6orni6ze7ebrf1y/Contract-Design-in-Renewable-Energy-Auctions-Bhakri.pdf?rlkey=sz8x0kvn2zt4h9rcb69akgqqy&st=w7lvcy92&dl=0" target="_blank">Paper</a>
         </div>
 
         <!-- Project 2 -->
@@ -139,7 +139,7 @@
             <p>
 <!--                 In this paper, we analyze the cost savings from renewable energy auctions in Germany, focusing on wind energy procurement. After Germany’s 2017 shift from feed-in tariffs to auctions, we observe an initial decrease in tariffs, followed by a reversion to ceiling prices. We develop an empirical model of bidding in multi-unit procurement auctions to explain this pattern, showing how markups vary with bidder cost uncertainty. Using detailed geospatial and auction data, we estimate the distribution of private costs and study the dynamics of bid convergence. Our results contribute to understanding the efficiency and cost implications of renewable energy auctions. -->
             </p>
-            <a href="link-to-paper-2.pdf" target="_blank">Paper</a>
+<!--             <a href="link-to-paper-2.pdf" target="_blank">Paper</a> -->
         </div>
 
     </main>
