--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <img src="AnshumanBhakriWebsitePic.jpg" alt="Your Profile Picture">
         <div>
             <h1>About Me</h1>
-            <p>Hello! I am Anshuman Bhakri, I am a PhD candidate at Boston College. My research interests lie at the intersection of Industrial Organization, and Environmental, and Energy Economics. My job market paper focuses on the effect of contract design in renewable energy auctions in the case of Indian solar auctions. You can find my job market paper <a href="https://www.dropbox.com/scl/fi/i6neja6orni6ze7ebrf1y/Contract-Design-in-Renewable-Energy-Auctions-Bhakri.pdf?rlkey=sz8x0kvn2zt4h9rcb69akgqqy&st=w7lvcy92&dl=0" target="_blank">here</a>.</p>
+            <p>Hello! I am Anshuman Bhakri, I am a PhD candidate at Boston College. My research interests lie at the intersection of Industrial Organization, Energy, and Environmental Economics. My job market paper focuses on the effect of contract design in renewable energy auctions for Indian solar auctions. You can find my job market paper <a href="https://www.dropbox.com/scl/fi/i6neja6orni6ze7ebrf1y/Contract-Design-in-Renewable-Energy-Auctions-Bhakri.pdf?rlkey=sz8x0kvn2zt4h9rcb69akgqqy&st=w7lvcy92&dl=0" target="_blank">here</a>.</p>
         </div>
     </main>
 
